--- a/package.json
+++ b/package.json
@@ -17,5 +17,10 @@
         "laravel-mix": "^1.0",
         "lodash": "^4.17.4",
         "vue": "^2.1.10"
+    },
+    "dependencies": {
+        "bulma": "^0.6.1",
+        "moment": "^2.19.1",
+        "vue-flatpickr-component": "^4.0.0"
     }
 }
