--- a/composer.json
+++ b/composer.json
@@ -6,9 +6,11 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "ecrmnn/lorem": "^1.0",
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
-        "laravel/tinker": "~1.0"
+        "laravel/tinker": "~1.0",
+        "magyarjeti/laravel-lipsum": "^1.1"
     },
     "require-dev": {
         "filp/whoops": "~2.0",
