--- a/package.json
+++ b/package.json
@@ -20,7 +20,10 @@
     },
     "dependencies": {
         "bulma": "^0.6.1",
+        "font-awesome": "^4.7.0",
+        "froala-editor": "^2.7.1",
         "moment": "^2.19.1",
-        "vue-flatpickr-component": "^4.0.0"
+        "vue-flatpickr-component": "^4.0.0",
+        "vue-markdown": "^2.2.4"
     }
 }
