--- a/composer.json
+++ b/composer.json
@@ -8,11 +8,13 @@
         "php": ">=7.0.0",
         "ecrmnn/lorem": "^1.0",
         "fideloper/proxy": "~3.3",
+        "illuminate/html": "^5.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "magyarjeti/laravel-lipsum": "^1.1"
     },
     "require-dev": {
+        "barryvdh/laravel-debugbar": "^3.1",
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
