--- a/package.json
+++ b/package.json
@@ -19,11 +19,15 @@
         "vue": "^2.1.10"
     },
     "dependencies": {
+        "array-includes": "^3.0.3",
         "bulma": "^0.6.1",
+        "es6-object-assign": "^1.1.0",
+        "es6-promise": "^4.1.1",
         "font-awesome": "^4.7.0",
         "froala-editor": "^2.7.1",
+        "jspolyfill-array.prototype.find": "^0.1.3",
         "moment": "^2.19.1",
-        "vue-flatpickr-component": "^4.0.0",
-        "vue-markdown": "^2.2.4"
+        "object.entries": "^1.0.4",
+        "vue-flatpickr-component": "^4.0.0"
     }
 }
