--- a/package.json
+++ b/package.json
@@ -28,7 +28,9 @@
         "jspolyfill-array.prototype.find": "^0.1.3",
         "moment": "^2.19.1",
         "object.entries": "^1.0.4",
+        "vue-color": "^2.4.3",
         "vue-flatpickr": "^2.3.0",
-        "vue-flatpickr-component": "^4.0.0"
+        "vue-flatpickr-component": "^4.0.0",
+        "vue-multiselect": "^2.0.6"
     }
 }
