--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     },
     "dependencies": {
         "array-includes": "^3.0.3",
+        "buefy": "^0.6.1",
         "bulma": "^0.6.1",
         "es6-object-assign": "^1.1.0",
         "es6-promise": "^4.1.1",
