--- a/package.json
+++ b/package.json
@@ -27,8 +27,8 @@
         "font-awesome": "^4.7.0",
         "froala-editor": "^2.7.1",
         "jspolyfill-array.prototype.find": "^0.1.3",
-        "moment": "^2.19.1",
         "object.entries": "^1.0.4",
+        "trix": "^0.11.1",
         "vue-color": "^2.4.3",
         "vue-flatpickr": "^2.3.0",
         "vue-flatpickr-component": "^4.0.0",
