--- a/package.json
+++ b/package.json
@@ -12,26 +12,26 @@
     "devDependencies": {
         "axios": "^0.16.2",
         "bootstrap-sass": "^3.3.7",
-        "cross-env": "^5.0.1",
-        "jquery": "^3.1.1",
-        "laravel-mix": "^1.0",
-        "lodash": "^4.17.4",
-        "vue": "^2.1.10"
+        "cross-env": "^5.1.4",
+        "jquery": "^3.3.1",
+        "laravel-mix": "^1.7.2",
+        "lodash": "^4.17.5",
+        "vue": "^2.5.16"
     },
     "dependencies": {
         "array-includes": "^3.0.3",
-        "buefy": "^0.6.1",
-        "bulma": "^0.6.1",
+        "buefy": "^0.6.5",
+        "bulma": "^0.6.2",
         "es6-object-assign": "^1.1.0",
-        "es6-promise": "^4.1.1",
-        "font-awesome": "^4.7.0",
-        "froala-editor": "^2.7.1",
+        "es6-promise": "^4.2.4",
+        "froala-editor": "^2.7.6",
         "jspolyfill-array.prototype.find": "^0.1.3",
+        "npm": "^5.8.0",
         "object.entries": "^1.0.4",
-        "trix": "^0.11.1",
-        "vue-color": "^2.4.3",
+        "trix": "^0.11.2",
+        "vue-color": "^2.4.6",
         "vue-flatpickr": "^2.3.0",
         "vue-flatpickr-component": "^4.0.0",
-        "vue-multiselect": "^2.0.6"
+        "vue-multiselect": "^2.1.0"
     }
 }
