--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "axios": "^0.16.2",
+        "babel-preset-stage-2": "^6.24.1",
         "bootstrap-sass": "^3.3.7",
         "cross-env": "^5.1.4",
         "jquery": "^3.3.1",
@@ -28,10 +29,12 @@
         "jspolyfill-array.prototype.find": "^0.1.3",
         "npm": "^5.8.0",
         "object.entries": "^1.0.4",
+        "standard": "^10.0.3",
         "trix": "^0.11.2",
         "vue-color": "^2.4.6",
         "vue-flatpickr": "^2.3.0",
         "vue-flatpickr-component": "^4.0.0",
+        "vue-full-calendar": "^2.5.2",
         "vue-multiselect": "^2.1.0"
     }
 }
