--- a/composer.json
+++ b/composer.json
@@ -11,7 +11,8 @@
         "illuminate/html": "^5.0",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "magyarjeti/laravel-lipsum": "^1.1"
+        "magyarjeti/laravel-lipsum": "^1.1",
+        "pbmedia/laravel-webdav": "^1.2"
     },
     "require-dev": {
         "barryvdh/laravel-debugbar": "^3.1",
