--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "ecrmnn/lorem": "^1.0",
         "fideloper/proxy": "~3.3",
         "illuminate/html": "^5.0",
+        "jenssegers/model": "^1.1",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
         "magyarjeti/laravel-lipsum": "^1.1",
