--- a/composer.json
+++ b/composer.json
@@ -7,10 +7,10 @@
     "require": {
         "php": ">=7.0.0",
         "ecrmnn/lorem": "^1.0",
-        "fideloper/proxy": "~3.3",
+        "fideloper/proxy": "^4.0",
         "illuminate/html": "^5.0",
         "jenssegers/model": "^1.1",
-        "laravel/framework": "5.5.*",
+        "laravel/framework": "5.7.*",
         "laravel/tinker": "~1.0",
         "magyarjeti/laravel-lipsum": "^1.1",
         "pbmedia/laravel-webdav": "^1.2"
@@ -20,7 +20,7 @@
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
         "mockery/mockery": "0.9.*",
-        "phpunit/phpunit": "~6.0"
+        "phpunit/phpunit": "^7.0"
     },
     "autoload": {
         "classmap": [
