--- a/composer.json
+++ b/composer.json
@@ -6,6 +6,7 @@
     "type": "project",
     "require": {
         "php": ">=7.0.0",
+        "andreasindal/laravel-markdown": "^3.0",
         "ecrmnn/lorem": "^1.0",
         "fideloper/proxy": "^4.0",
         "illuminate/html": "^5.0",
